click highlighting working for both nodes and edges

--- a/basic_test.css
+++ b/basic_test.css
@@ -5,6 +5,11 @@
     stroke-width: 0.25pt;
 }
 
+.dimmed {
+    fill-opacity: 0.2;
+    stroke-opacity: 0.2;
+}
+
 .link {
     stroke: #999;
     stroke-width: 0.5px;
